Bug 253112 - [UI-side compositing] Assertion under RemoteLayerTreeEventDispatcher::displayLink() running tests
Summary: [UI-side compositing] Assertion under RemoteLayerTreeEventDispatcher::display...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-28 14:20 PST by Simon Fraser (smfr)
Modified: 2023-02-28 16:21 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2023-02-28 14:20:21 PST
Tests are asserting at:

ASSERTION FAILED: drawingArea && drawingArea->isRemoteLayerTreeDrawingAreaProxyMac()
/Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.cpp(228) : WebKit::DisplayLink *WebKit::RemoteLayerTreeEventDispatcher::displayLink() const
1   0x1202fb6b9 WTFCrash
2   0x156ac046b WTFCrashWithInfo(int, char const*, char const*, int)
3   0x158b4bba8 WebKit::RemoteLayerTreeEventDispatcher::displayLink() const
4   0x158b4aaa9 WebKit::RemoteLayerTreeEventDispatcher::stopDisplayLinkObserver()
5   0x158b4af47 WebKit::RemoteLayerTreeEventDispatcher::startOrStopDisplayLink()
6   0x158b4aef8 WebKit::RemoteLayerTreeEventDispatcher::wheelEventHysteresisUpdated(PAL::HysteresisState)
7   0x158b60cbe WebKit::RemoteLayerTreeEventDispatcher::RemoteLayerTreeEventDispatcher(WebKit::RemoteScrollingCoordinatorProxyMac&, WTF::ObjectIdentifier<WebCore::PageIdentifierType>)::$_9::operator()(PAL::HysteresisState) const
8   0x158b60c4f WTF::Detail::CallableWrapper<WebKit::RemoteLayerTreeEventDispatcher::RemoteLayerTreeEventDispatcher(WebKit::RemoteScrollingCoordinatorProxyMac&, WTF::ObjectIdentifier<WebCore::PageIdentifierType>)::$_9, void, PAL::HysteresisState>::call(PAL::HysteresisState)
9   0x157f2fa55 WTF::Function<void (PAL::HysteresisState)>::operator()(PAL::HysteresisState) const
10  0x157f2f6eb PAL::HysteresisActivity::hysteresisTimerFired()
11  0x157f30109 decltype(*(static_cast<PAL::HysteresisActivity*&>(fp0)).*fp()) std::__1::__invoke<void (PAL::HysteresisActivity::*&)(), PAL::HysteresisActivity*&, void>(void (PAL::HysteresisActivity::*&)(), PAL::HysteresisActivity*&)
12  0x157f3008d std::__1::__bind_return<void (PAL::HysteresisActivity::*)(), std::__1::tuple<PAL::HysteresisActivity*>, std::__1::tuple<>, __is_valid_bind_return<void (PAL::HysteresisActivity::*)(), std::__1::tuple<PAL::HysteresisActivity*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (PAL::HysteresisActivity::*)(), std::__1::tuple<PAL::HysteresisActivity*>, 0ul, std::__1::tuple<> >(void (PAL::HysteresisActivity::*&)(), std::__1::tuple<PAL::HysteresisActivity*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&)
13  0x157f30040 std::__1::__bind_return<void (PAL::HysteresisActivity::*)(), std::__1::tuple<PAL::HysteresisActivity*>, std::__1::tuple<>, __is_valid_bind_return<void (PAL::HysteresisActivity::*)(), std::__1::tuple<PAL::HysteresisActivity*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (PAL::HysteresisActivity::*&)(), PAL::HysteresisActivity*&>::operator()<>()
14  0x157f2ffd9 WTF::Detail::CallableWrapper<std::__1::__bind<void (PAL::HysteresisActivity::*&)(), PAL::HysteresisActivity*&>, void>::call()
15  0x156b4af92 WTF::Function<void ()>::operator()() const
16  0x156b4aee9 WTF::RunLoop::Timer::fired()
17  0x1203dbf09 WTF::RunLoop::TimerBase::start(WTF::Seconds, bool)::$_1::operator()(__CFRunLoopTimer*, void*) const
18  0x1203dbead WTF::RunLoop::TimerBase::start(WTF::Seconds, bool)::$_1::__invoke(__CFRunLoopTimer*, void*)
19  0x7ff811500946 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__
20  0x7ff8115004ae __CFRunLoopDoTimer
21  0x7ff8115000c4 __CFRunLoopDoTimers
22  0x7ff8114e6a0c __CFRunLoopRun
23  0x7ff8114e5b60 CFRunLoopRunSpecific
24  0x7ff81234202a -[NSRunLoop(NSRunLoop) runMode:beforeDate:]
25  0x10c25c71a WTR::TestController::platformRunUntil(bool&, WTF::Seconds)
26  0x10c2074ef WTR::TestController::runUntil(bool&, WTF::Seconds)
27  0x10c20e8ac WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage)::$_5::operator()() const
28  0x10c20d7f2 WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage)
29  0x10c20cdf0 WTR::TestController::ensureViewSupportsOptionsForTest(WTR::TestInvocation const&)
30  0x10c20fcc1 WTR::TestController::configureViewForTest(WTR::TestInvocation const&)
31  0x10c2846a5 WTR::TestInvocation::invoke()
Comment 1 Radar WebKit Bug Importer 2023-02-28 14:20:57 PST
<rdar://problem/106051454>
Comment 2 Simon Fraser (smfr) 2023-02-28 14:26:12 PST
Pull request: https://github.com/WebKit/WebKit/pull/10824
Comment 3 EWS 2023-02-28 16:21:23 PST
Committed 260975@main (f249228a3a5d): <https://commits.webkit.org/260975@main>

Reviewed commits have been landed. Closing PR #10824 and removing active labels.